Test executor to load test cases
fixes: https://github.com/creek-service/creek-system-test/issues/38

Enhance the test executor to parse and load the test cases, pass them to a (dummy) executor, and handle the results.

Suite executor will come later:  https://github.com/creek-service/creek-system-test/issues/36
Results writer will come later: https://github.com/creek-service/creek-system-test/issues/37